Configured Elasticsearch for the project. Closes #9.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+
+# elasticsearch properties
+logging.level.org.springframework.data.elasticsearch.client.WIRE = trace
+
+spring.security.user.name=kerem
+spring.security.user.password=kerem
